# TwoMovingAverageQRSdetector

./: CMakeLists.txt  Makefile  README.md  TwoMovingAverageQRSdetector.cpp  compare_cpp_and_python_detector.py  demo.cpp  test_avg.cpp  test_fir.cpp  two_avg_qrs_det.h
